plist 위치 서비 -> 서비스로 바꿈, 시장 컬렉션 VC Section 만들었음

--- a/Traditional_Market/Info.plist
+++ b/Traditional_Market/Info.plist
@@ -8,6 +8,13 @@
 		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
+			<key>New Exception Domain</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+			</dict>
 			<key>http://api.data.go.kr/openapi/tn_pubr_public_trdit_mrkt_api</key>
 			<string></string>
 		</dict>
