--- a/Traditional_Market/Info.plist
+++ b/Traditional_Market/Info.plist
@@ -6,14 +6,12 @@
 	<array>
 		<string>ko</string>
 	</array>
-	<key>UIUserInterfaceStyle</key>
-	<string>Light</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-		<key>NSAllowsArbitraryLoadsUsageDescription</key>
-		<dict/>
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
+		<key>NSAllowsArbitraryLoadsUsageDescription</key>
+		<dict/>
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>New Exception Domain</key>
@@ -44,5 +42,9 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
